# inventory-management-tool

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml  inventory_api_prd.md
migrations/: 20260609163531_inventory.sql
src/: lib.rs  main.rs  middleware.rs  routes.rs  types.rs
