[package]
name = "inventory-management-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = "0.4.45"
jsonwebtoken = "10.4.0"
serde = { version = "1.0.228", features = ["derive"] }

serde_json = "1.0.150"
sqlx = "0.9.0"
tokio = { version = "1.52.3", features = ["full", "rt-multi-thread"] }
tracing = "0.1.44"
uuid = "1.23.2"
